--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "http-status-codes": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
     "npm": "^7.7.6",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31",
