--- a/native App/code_brewing_social_commerce/pubspec.yaml
+++ b/native App/code_brewing_social_commerce/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   contacts_service: ^0.4.6
   permission_handler: ^6.1.1
   intl: ^0.17.0
+  story_view: ^0.12.8
 
 
   # The following adds the Cupertino Icons font to your application.
